2002-11-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sys/sysctl.h: Add ugly hacks to prevent
	warnings from the kernel headers.

2002-11-05  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/mips/sysdep.h [! __PIC__] (PSEUDO): Add nop after jump.
	From Johannes Stezenbach <js@convergence.de>.

	* sysdeps/unix/sysv/linux/mips/Versions (libc: GLIBC_2.0): Change
	#errlist-compat magic comment to give 123 as size.
	(libc: GLIBC_2.1): Remove this set, moving #errlist-compat magic to ...
	(libc: GLIBC_2.2): ... here.
	(libc: GLIBC_2.3): Likewise.

2002-11-05  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-fini.c (_dl_fini): Correct the increment of l_opencount
	which happens at the beginning so that we can unload modules in
	__libc_freeres.

2002-11-06  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/bits/setjmp.h (JB_SIZE): Define only
	under [__USE_MISC || _ASM].

	* elf/elf.h: Remove the obsolete SH TLS relocations.

2002-11-05  Ulrich Drepper  <drepper@redhat.com>

	* posix/regcomp.c (regcomp): Initialize preg->can_be_null to zero.

2002-11-05  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep.h: Handle
	__NR_pread64 and __NR_pwrite64.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/sysdep.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/pread.c: Remove __NR_pread64
	and __NR_pwrite64.
	Revert change to use INLINE_SYSCALL.
	* sysdeps/unix/sysv/linux/powerpc/pread64.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/pwrite.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/pwrite64.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/ftruncate64.c: Revert change to use
	INLINE_SYSCALL.
	* sysdeps/unix/sysv/linux/powerpc/truncate64.c: Likewise.

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep.h (INLINE_SYSCALL):
	Update clobber list and add a comment about the syscall ABI.

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/syscalls.list (s_pread64,
	s_pwrite64, s_ftruncate, s_truncate): Re-add.
