@@ -1,3 +1,13 @@
+2002-11-06  Ulrich Drepper  <drepper@redhat.com>
+
+	* posix/regcomp.c (regcomp): __re_compile_fastmap can never fail.
+	If re_compile_internal failed free fastmap buffer.
+	(free_dfa_content): Broken out of regfree function.  Frees all dfa
+	related data.
+	(regfree): Add free_dfa_content.
+	(re_compile_internal): If any of the called functions fails free
+	all dfa related memory.
+
 2002-11-05  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/sys/sysctl.h: Add ugly hacks to prevent
